--- a/css/custom.css
+++ b/css/custom.css
@@ -41,6 +41,9 @@ Left column
 
 .logo-image {
     float:right; 
+    margin-top:20px;
+    width:50px;
+    height:50px;
 }
 
 .full-image {   
@@ -114,12 +117,19 @@ Responsive variables
         text-align: center;
         padding-left: 0;
     }
+
+    .logo-image {
+        float:none;
+        height: 50px;
+        width: 50px;
+    }
     .full-image {    
         width: 100%;
         max-height: 200px;
     }
     .content {
         padding: 12px 24px;
+        text-align: center;
     }
 
 }
